--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         dotnet-version: 10.0.x
     - name: Build
-      run: dotnet publish -c Release
+      run: dotnet publish -c Release -r linux-x64 -p:PublishSingleFile=true --self-contained true
     - name: Upload Artifact
       uses: actions/upload-artifact@v4
       with:
