--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,8 +21,8 @@ jobs:
       with:
         dotnet-version: 10.0.x
     - name: Build
-      run: dotnet publish -c Release -r linux-x64 -p:PublishSingleFile=true --self-contained true
+      run: dotnet publish -c Release -p:PublishSingleFile=true --self-contained true
     - name: Upload Artifact
       uses: actions/upload-artifact@v4
       with:
-        path: src/bin/publish/
+        path: src/bin/Release/net10.0/linux-x64/publish
