--- a/src/Limekuma.csproj
+++ b/src/Limekuma.csproj
@@ -12,6 +12,11 @@
     <PackageReference Include="SixLabors.Fonts" Version="2.1.3" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.9" />
     <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.6" />
+    <PackageReference Include="Grpc.AspNetCore" Version="2.71.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Protobuf Include="Protos\kumabot.proto" GrpcServices="Server" />
   </ItemGroup>
   
 </Project>
