--- a/src/Limekuma.csproj
+++ b/src/Limekuma.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="SixLabors.Fonts" Version="2.1.3" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.12" />
     <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.7" />
+    <PackageReference Include="SmartFormat" Version="3.6.1" />
     <PackageReference Include="Grpc.AspNetCore" Version="2.71.0" />
   </ItemGroup>
 
