--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -3,26 +3,21 @@
 
 name: .NET
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+on: [push, pull_request]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: 10.0.x
-    - name: Build
-      run: dotnet publish -c Release -p:PublishSingleFile=true --self-contained true
-    - name: Upload Artifact
-      uses: actions/upload-artifact@v4
-      with:
-        path: src/bin/Release/net10.0/linux-x64/publish
+      - uses: actions/checkout@v4
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 10.0.x
+      - name: Build
+        run: dotnet publish -c Release -p:PublishSingleFile=true --self-contained true
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          path: src/bin/Release/net10.0/linux-x64/publish
